--- a/projects/ngx-audio-wave/src/lib/component/ngx-audio-wave.component.html
+++ b/projects/ngx-audio-wave/src/lib/component/ngx-audio-wave.component.html
@@ -2,18 +2,18 @@
 
 <div [style.--ngx-audio-wave-color]="color()"
      class="ngx-audio-wave-wrapper">
-  @if (!_error()) {
+  @if (!hasError()) {
     @if (!hideBtn()) {
-      @if (_isPause()) {
+      @if (isPaused()) {
         <button class="ngx-audio-wave-btn" (click)="play()">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
             <path
               d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
           </svg>
         </button>
       } @else {
         <button class="ngx-audio-wave-btn" (click)="pause()">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
             <path
               d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5zm5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5z"/>
           </svg>
@@ -21,12 +21,12 @@
       }
     }
 
-    <div class="ngx-audio-wave" [style.height]="height() + 'px'" [style.width]="width + 'px'">
-      @if (!_isLoading()) {
+    <div class="ngx-audio-wave" [style.height.px]="height()" [style.width.px]="width()">
+      @if (!isLoading()) {
         <svg (click)="setTime($event)"
-             [attr.viewBox]="'0 0 ' + width + ' ' + height()"
+             [attr.viewBox]="`0 0 ${width()} ${height()}`"
              class="real">
-          @for (rect of _normalizedData(); track rect; let index = $index) {
+          @for (rect of normalizedData(); track rect; let index = $index) {
             <rect
               [attr.height]="rect * height()"
               [attr.width]="2"
@@ -38,9 +38,9 @@
           }
         </svg>
 
-        <div class="fake" [style.clip-path]="'inset(0px ' + (100 - _exactPlayedPercent()) + '% 0px 0px)'">
-          <svg [attr.viewBox]="'0 0 ' + width + ' ' + height()">
-            @for (rect of _normalizedData(); track rect; let index = $index) {
+        <div class="fake" [style.clip-path]="clipPath()">
+          <svg [attr.viewBox]="`0 0 ${width()} ${height()}`">
+            @for (rect of normalizedData(); track rect; let index = $index) {
               <rect
                 [attr.height]="rect * height()"
                 [attr.width]="2"
@@ -61,6 +61,6 @@
       }
     </div>
   } @else {
-    Some errors occured
+    Some errors occurred
   }
 </div>
