--- a/projects/ngx-audio-wave/src/lib/ngx-audio-wave.scss
+++ b/projects/ngx-audio-wave/src/lib/ngx-audio-wave.scss
@@ -95,3 +95,22 @@
     transform: translateY(100%);
   }
 }
+
+// Screen reader only class
+.ngx-audio-wave-sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+// Focus styles for accessibility
+.ngx-audio-wave:focus {
+  outline: 2px solid var(--ngx-audio-wave-color);
+  outline-offset: 2px;
+}
