--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -130,3 +130,17 @@ kbd {
     font-weight: 500;
   }
 }
+
+.speed-info {
+  background-color: rgba(255, 87, 34, 0.1);
+  border: 1px solid rgba(255, 87, 34, 0.3);
+  border-radius: 8px;
+  padding: 1rem;
+  margin-top: 1rem;
+
+  p {
+    margin: 0;
+    color: #e65100;
+    font-weight: 500;
+  }
+}
